@@ -1,3 +1,7 @@
+2011-11-11 Steven Beale <steven.beale@physik.uni-muenchen.de>
+        * Adding option fastPoolMerge for running mergePOOL.exe 
+          * Added as an extension of existing MergePool_trf.py
+
 2011-11-10  John Chapman  <John.Chapman@cern.ch>
 
 	* share/skeleton.MergeHIT.py - add code to use postExec and
